<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>ch.hsr.ifs</groupId>
  <artifactId>ch.hsr.ifs.cute.parent</artifactId>
  <version>5.4.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <tycho-version>1.0.0</tycho-version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <modules>
    <!-- CUTE Target Platform Defintion -->
    <module>ch.hsr.ifs.cute.target</module>

    <!-- CUTE Plugin -->
    <module>ch.hsr.ifs.cute.feature</module>
    <module>ch.hsr.ifs.testframework</module>
    <module>ch.hsr.ifs.cute.framework.extension</module>
    <module>ch.hsr.ifs.cute.core</module>
    <module>ch.hsr.ifs.cute.help</module>
    <module>ch.hsr.ifs.cute.ui</module>
    <module>ch.hsr.ifs.cute.ui.test</module>
    <module>ch.hsr.ifs.testframework.test</module>

    <!-- CUTE Headers -->
    <module>ch.hsr.ifs.cute.headers</module>
    <module>ch.hsr.ifs.cute.headers.test</module>

    <!-- CUTE GCOV Integration -->
    <module>ch.hsr.ifs.cute.gcov.feature</module>
    <module>ch.hsr.ifs.cute.gcov</module>
    <module>ch.hsr.ifs.cute.gcov.test</module>

    <!-- BOOST -->
    <module>ch.hsr.ifs.cute.boost.feature</module>
    <module>ch.hsr.ifs.cute.boost</module>

    <!-- CUTE Updatesite -->
    <module>ch.hsr.ifs.cute.updatesite</module>

    <!-- CUTE SWTBotTests -->
    <module>ch.hsr.ifs.cute.swtbottest</module>
  </modules>

  <profiles>
    <!-- Default Surefire settings profile -->
    <profile>
      <id>ui-test-plugin</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-surefire-plugin</artifactId>
            <version>${tycho-version}</version>
            <configuration>
              <dependencies>
                <dependency>
                  <type>p2-installable-unit</type>
                  <artifactId>org.eclipse.sdk.ide</artifactId>
                  <version>0.0.0</version>
                </dependency>
              </dependencies>
              <useUIHarness>true</useUIHarness>
              <useUIThread>true</useUIThread>
              <product>org.eclipse.epp.package.cpp.product</product>
              <application>org.eclipse.ui.ide.workbench</application>
              <includes>
                <include>**/TestSuiteAll.java</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <!-- Automatic profile to define the settings for SWTBot test plugins -->
    <profile>
      <id>swtbot-test-plugin</id>
      <activation>
        <file>
          <exists>swtbot-test-plugin.properties</exists>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-surefire-plugin</artifactId>
            <version>${tycho-version}</version>
            <configuration>
              <dependencies>
                <dependency>
                  <type>p2-installable-unit</type>
                  <artifactId>org.eclipse.sdk.ide</artifactId>
                  <version>0.0.0</version>
                </dependency>
              </dependencies>
              <useUIHarness>true</useUIHarness>
              <useUIThread>false</useUIThread>
              <product>org.eclipse.epp.package.cpp.product</product>
              <application>org.eclipse.ui.ide.workbench</application>
              <includes>
                <include>**/TestSuiteAll.java</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>

      <!-- Include Eclipse Tycho -->
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>

      <!-- Target Platform -->
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>

          <!-- Supported platforms -->
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>

          <!-- Eclipse Target Platform Definition -->
          <target>
            <artifact>
              <groupId>ch.hsr.ifs</groupId>
              <artifactId>ch.hsr.ifs.cute.target.cdt940</artifactId>
              <version>5.4.0-SNAPSHOT</version>
            </artifact>
          </target>

        </configuration>
      </plugin>

      <!-- Java compiler settings -->
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-compiler-plugin</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <useProjectSettings>false</useProjectSettings>
        </configuration>
      </plugin>

      <!-- Tucho packaging settings -->
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-packaging-plugin</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <archive>
            <addMavenDescriptor>false</addMavenDescriptor>
          </archive>
        </configuration>
      </plugin>

      <!-- Code-signing settings -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jarsigner-plugin</artifactId>
        <version>1.4</version>
        <executions>
          <execution>
            <id>sign</id>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <keystore>${keystore}</keystore>
          <alias>${keyalias}</alias>
          <storepass>${certpass}</storepass>
          <storetype>pkcs12</storetype>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
